naime , block , widht menu

--- a/index.html
+++ b/index.html
@@ -8,50 +8,52 @@
     <title>Document</title>
   </head>
   <body>
-    <aside class="menu">
-      <div class="menu__header">
-        <div class="header__items">
-          <button
-            class="button__icon button__icon--header button__icon--back"
-          ></button>
-          <button class="header__logo"></button>
-          <button
-            class="button__icon button__icon--header button__icon--search"
-          ></button>
-        </div>
-      </div>
-      <div class="menu__container">
-        <button class="menu__container-button menu__container-button--active">
-          Ремонт техники
-        </button>
-        <button class="menu__container-button">Услуги и сервисы</button>
-        <button class="menu__container-button">Корпоративным клиентам</button>
-        <button class="menu__container-button">Продавцам техники</button>
-        <button class="menu__container-button">Партнерам</button>
-        <button class="menu__container-button">Производителям</button>
-        <button class="menu__container-button">Наши сервисные центры</button>
-        <button class="menu__container-button">Контакты</button>
-      </div>
-      <div class="menu__footer">
-        <div class="contacts">
-          <button
-            class="button__icon button__icon-contacts button__icon--phone"
-          ></button>
-          <button
-            class="button__icon button__icon-contacts button__icon--sms"
-          ></button>
-          <button
-            class="button__icon button__icon-contacts button__icon--chel"
-          ></button>
-          <div class="contacts__email"><a href="#">mail@cps.com</a></div>
-          <div><p class="contacts__phone">8 800 890 8900</p></div>
-          <div class="contacts__lang">
-            <button class="contancts__buttom--lang">RU</button>
-            <button class="contancts__buttom--lang">EN</button>
-            <button class="contancts__buttom--lang">CH</button>
+    <div class="menu-container">
+      <aside class="menu">
+        <div class="menu__header">
+          <div class="menu__items">
+            <button
+              class="button__icon header__button button__icon--back"
+            ></button>
+            <button class="header__logo"></button>
+            <button
+              class="button__icon header__button button__icon--search"
+            ></button>
           </div>
         </div>
-      </div>
-    </aside>
+        <div class="menu__container">
+          <button class="menu__container-button menu__container-button--active">
+            Ремонт техники
+          </button>
+          <button class="menu__container-button">Услуги и сервисы</button>
+          <button class="menu__container-button">Корпоративным клиентам</button>
+          <button class="menu__container-button">Продавцам техники</button>
+          <button class="menu__container-button">Партнерам</button>
+          <button class="menu__container-button">Производителям</button>
+          <button class="menu__container-button">Наши сервисные центры</button>
+          <button class="menu__container-button">Контакты</button>
+        </div>
+        <div class="menu__footer">
+          <div class="contacts">
+            <button
+              class="button__icon contacts__button button__icon--phone"
+            ></button>
+            <button
+              class="button__icon contacts__button button__icon--sms"
+            ></button>
+            <button
+              class="button__icon contacts__button button__icon--chel"
+            ></button>
+            <div class="contacts__email"><a href="#">mail@cps.com</a></div>
+            <div><p class="contacts__phone">8 800 890 8900</p></div>
+            <div class="contacts__lang">
+              <button class="contacts_language-button">RU</button>
+              <button class="contacts_language-button">EN</button>
+              <button class="contacts_language-button">CH</button>
+            </div>
+          </div>
+        </div>
+      </aside>
+    </div>
   </body>
 </html>
