--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <div class="menu__header">
           <div class="menu__items">
             <button
-              class="button__icon header__button button__icon--back"
+              class="button__icon menu__button button__icon--back"
             ></button>
-            <button class="header__logo"></button>
+            <button class="menu__logo"></button>
             <button
-              class="button__icon header__button button__icon--search"
+              class="button__icon menu__button button__icon--search"
             ></button>
           </div>
         </div>
